<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_general_info_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_gender"
            android:textStyle="bold"
            android:paddingEnd="@dimen/main_general_info_padding"/>
        <TextView
            android:id="@+id/tvGenderData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_gender" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_name"
                android:textStyle="bold"
                android:paddingEnd="@dimen/main_general_info_padding"/>
            <TextView
                android:id="@+id/tvNameData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_name" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_location"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/main_general_info_padding">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvLocationAdress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_location_adress"
                    android:textStyle="bold"
                    android:paddingEnd="@dimen/main_general_info_padding"/>
                <TextView
                    android:id="@+id/tvLocationAdressData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_location_adress" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvLocationCoor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_location_coordinates"
                    android:textStyle="bold"
                    android:paddingEnd="@dimen/main_general_info_padding"/>
                <TextView
                    android:id="@+id/tvLocationCoorData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_location_coordinates" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvLocationTimeZone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_location_timezone"
                    android:textStyle="bold"
                    android:paddingEnd="@dimen/main_general_info_padding"/>
                <TextView
                    android:id="@+id/tvLocationTimeZoneData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_location_timezone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_email"
                android:textStyle="bold"
                android:paddingEnd="@dimen/main_general_info_padding"/>
            <TextView
                android:id="@+id/tvEmailData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_email" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/buttonMapMyPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="Ir a Mapa con mi posición"
        android:textColor="@color/quantum_white_100"
        app:layout_constraintBottom_toTopOf="@+id/buttonMap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="Ir a Mapa"
        android:textColor="@color/quantum_white_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>